app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: attack-path-service
spec:
  selector:
    app: attack-path-express
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
